--- a/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
+++ b/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
@@ -1,8 +1,12 @@
 <div>
     <ul>
-        <li> <a [routerLink]="['dashboard']">My Request</a></li>
-        <li> My Work</li>
-        <li> Edit Profile</li>
+        <li> My Request</li>
+        <li><a [routerLink]="['dashboard/myWork']"> My Work</a></li>
+        <li> <a [routerLink]="['user/editProfile']">Edit Profile</a></li>
         <li>LogOut</li>
+
+
+
     </ul>
+
 </div>
