--- a/Amex.CCA.WebClient/app/src/app/app.component.html
+++ b/Amex.CCA.WebClient/app/src/app/app.component.html
@@ -1,15 +1,14 @@
-<div class="container"> 
+<div class="container">
   <div class="row">
-    <div class="row">Header</div>
+    <div class="row"><header></header></div>
     <div class="row">
-     <div class="col-md-4">
-      <nav-bar></nav-bar>  
-     </div>  
-     <div class="col-md-8">
-       <router-outlet></router-outlet>
+      <div class="col-md-4">
+        <nav-bar></nav-bar>
+      </div>
+      <div class="col-md-8">
+        <router-outlet></router-outlet>
       </div>
     </div>
-    <div class="row">Footer</div>
+     <div class="row"><footer></footer></div> 
   </div>
 </div>
-
