credit card controller is added to project with front end integration

--- a/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
+++ b/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
@@ -1,7 +1,8 @@
 <div>
     <ul>
         <li> My Request</li>
-        <li><a [routerLink]="['dashboard/myWork']"> My Work</a></li> 
+        <li><a [routerLink]="['dashboard/myWork']"> My Work</a></li>
+        <li><a [routerLink]="['creditcard']"> Credit Card</a></li> 
         <li> <a [routerLink]="['user/editProfile']">Edit Profile</a></li>
         <li>LogOut</li>
 
