--- a/Amex.CCA.WebClient/app/src/app/creditcard/creditcard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/creditcard/creditcard.template.html
@@ -1,16 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <title>Create Credit Card Here</title>
     <meta charset="utf-8" />
 </head>
+
 <body>
     <div class="rows">
         Create / Update Credit Card Info
     </div>
     <br />
     <div>
-        <form  [formGroup]="ccForm"  (ngSubmit)="onSubmit(ccForm.value)">
+        <form [formGroup]="ccForm" (ngSubmit)="onSubmit(ccForm.value)">
             <div class="form-group">
                 <div class="col-md-3">
                     <label for="txtFullName">Name in Full</label>
@@ -27,7 +29,7 @@
                     <input id="txtDisplayName" formControlName="displayName" type="text" class="form-control" />
                 </div>
             </div>
- 
+
             <div class="form-group">
                 <div class="col-md-3">
                     <label for="txtNic">NIC</label>
@@ -44,7 +46,7 @@
                     <input id="txtPassport" type="text" formControlName="passport" class="form-control" />
                 </div>
             </div>
-            
+
             <div class="form-group">
                 <div class="col-md-3">
                     <label for="txtAddress">Address</label>
@@ -102,7 +104,7 @@
                     <label for="txtSalary">Salary</label>
                 </div>
                 <div class="col-md-3">
-                    <input id="txtSalary" type="text" formControlName="salary" class="form-control" />
+                    <input id="txtSalary" type="text" formControlName="salary" class="form-control"  [ngClass]="{'make-border-red':this.ccForm.controls['salary'].errors?.required && !this.ccForm.controls['salary'].pristine }"/>
                 </div>
 
                 <div class="col-md-3">
@@ -137,10 +139,13 @@
                     <label for="ddlCardType">Card Type</label>
                 </div>
                 <div class="col-md-3">
-                    <input type="" id="ddlCardType" type="text" formControlName="cardType" class="form-control" />
+
+                    <!-- <div *ngFor="let com of cardTypes" >{{com.Name}}</div> -->
+
                     <select formNameControl="cardType" class="form-control" id="ddlCardType">
-                        <option *ngFor="ct of cardTypes"></option>
+                        <option *ngFor="let ct of cardTypes" [value]="ct.CardTypeId">{{ct.Name}}</option>
                     </select>
+
 
                 </div>
 
@@ -162,7 +167,7 @@
                     <input id="txtNote" type="text" formControlName="note" class="form-control" />
                 </div>
 
-  
+
             </div>
 
             <div class="rows">
@@ -172,4 +177,5 @@
         </form>
     </div>
 </body>
+
 </html>
