Refactor Login Module

--- a/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
+++ b/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
@@ -4,10 +4,7 @@
         <li><a [routerLink]="['dashboard/myWork']"> My Work</a></li>
         <li><a [routerLink]="['creditcard']"> Credit Card</a></li> 
         <li> <a [routerLink]="['user/editProfile']">Edit Profile</a></li>
-        <li>LogOut</li>
-
-
-
+        <li><a class="make-a-link" (click)="onLogout()" >LogOut</a></li>
     </ul>
 
 </div>
