dashboard design branch created

--- a/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
@@ -1,1 +1,7 @@
 <div>Dashboard Loaded111</div>
+  
+    <div *ngFor="let creditcard of cardRequestList" >{{creditcard}}</div>
+    <div></div>
+
+
+
