--- a/Amex.CCA.WebClient/app/src/app/user/user-profile.styles.scss
+++ b/Amex.CCA.WebClient/app/src/app/user/user-profile.styles.scss
@@ -1,3 +1,14 @@
 .profile-img{
     width:51px;
 }
+.arrow-cont{
+    padding-top:7px;
+    margin:7px;
+}
+#dwn-arrow{
+    font-size: 13px;
+}
+.prof-pane{
+   top:157%;
+   left:-437%;
+}
