--- a/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
+++ b/Amex.CCA.WebClient/app/src/app/nav-bar/navbar.template.html
@@ -1,10 +1,25 @@
-<div>
-    <ul>
-        <li> My Request</li>
-        <li><a [routerLink]="['dashboard/myWork']"> My Work</a></li>
-        <li><a [routerLink]="['creditcard']"> Credit Card</a></li> 
-        <li> <a [routerLink]="['user/editProfile']">Edit Profile</a></li>
-        <li><a class="make-a-link" (click)="onLogout()" >LogOut</a></li>
-    </ul>
-
-</div>
+<!--<div class="navbar-container">-->
+      <div class="sidebar-nav">
+        <div class="navbar navbar-default" role="navigation">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <span class="visible-xs navbar-brand">Sidebar menu</span>
+          </div>
+          <div class="navbar-collapse collapse sidebar-navbar-collapse">
+            <ul class="nav navbar-nav">
+              <!--<li class="active"><a href="#">Menu Item 1</a></li>-->
+              <li> <a href="#">My Request</a></li>
+              <li><a [routerLink]="['dashboard/myWork']"> My Work</a></li>
+              <li><a [routerLink]="['creditcard']"> Credit Card</a></li>
+              <li> <a [routerLink]="['user/editProfile']">Edit Profile</a></li>
+              <li><a class="make-a-link" (click)="onLogout()">LogOut</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+  <!--</div>-->
