registration component added

--- a/Amex.CCA.WebClient/app/src/app/login/login.template.html
+++ b/Amex.CCA.WebClient/app/src/app/login/login.template.html
@@ -18,6 +18,7 @@
   <div class="row">
     <div class="col-md-12">
       <button class="pull-left" type="submit">Login</button>
+      <button class="pull-left" type="button" (click)="onRegisterClick()">Register</button>
     </div>
   </div>
 </form>
