credit card view removed

--- a/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
@@ -1,28 +1,28 @@
 <div class="panel panel-primary">
-    <div style="height: 60px;padding:0"  class="panel-heading" >
-      <div class="form-group row" >
-        <div class="col-xs-3" style="align-content:center">
-          <h3> <label for="fname">Full Name</label></h3>
-        </div>
-
-        <div class="col-xs-3">
-          <h3><label for="displayname">Display Name</label></h3>
-        </div>
-
-        <div class="col-xs-3">
-          <h3><label for="cardtype">Card Type</label></h3>
-        </div>
-
-        <div class="col-xs-3">
-          <h3><label for="cardlimit">Card Limit</label></h3>
-        </div>
+  <div style="height: 60px;padding:0" class="panel-heading">
+    <div class="form-group row">
+      <div class="col-xs-3" style="align-content:center">
+        <h3> <label for="fname">Full Name</label></h3>
       </div>
+
+      <div class="col-xs-3">
+        <h3><label for="displayname">Display Name</label></h3>
       </div>
+
+      <div class="col-xs-3">
+        <h3><label for="cardtype">Card Type</label></h3>
+      </div>
+
+      <div class="col-xs-3">
+        <h3><label for="cardlimit">Card Limit</label></h3>
+      </div>
+    </div>
   </div>
-<div *ngFor="let creditcard of cardRequestList ,let index = index">
+</div>
+<div id="accordion" *ngFor="let creditcard of cardRequestList ,let index = index" (click)="clickRequest(index)">
   <div class="panel panel-primary">
     <div style="height: 40px;padding:0" class="panel-heading">
-      <div class="form-group row" data-toggle="collapse" data-parent="#accordion" href="#demo" >
+      <div class="form-group row" data-toggle="collapse" data-parent="#accordion" href="#demo">
         <div class="col-xs-3" style="align-content:space-between">
           <h5> <label for="fname">{{creditcard.FullName}}</label></h5>
         </div>
@@ -40,8 +40,8 @@
         </div>
       </div>
     </div>
-    <div class="panel-body panel-collapse" >
-      <div id="#demo" class="collapse in" *ngIf="creditcard.IsExpandable else demo2"> 
+    <div id="#demo" class="collapse in" *ngIf="index==selectedIndex">
+      <div class="panel-body panel-collapse">
 
         <div>
           <form>
@@ -50,28 +50,28 @@
                 <label>Name in Full</label>
               </div>
               <div class="col-md-3">
-                <label> {{creditcard.FullName}}</label>
+                <label>- {{creditcard?.FullName}}</label>
               </div>
               <div class="col-md-3">
                 <label>Display Name</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.DisplayName}}</label>
-            </div>
+                <label>- {{creditcard?.DisplayName}}</label>
               </div>
+            </div>
 
             <div class="form-group">
               <div class="col-md-3">
                 <label for="txtNic">NIC</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.Nic}}</label>
+                <label>- {{creditcard?.Nic}}</label>
               </div>
               <div class="col-md-3">
                 <label for="txtPassport">Passport</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.Passport}}</label>
+                <label>- {{creditcard?.Passport}}</label>
               </div>
             </div>
 
@@ -80,13 +80,13 @@
                 <label for="txtAddress">Address</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.Address}} </label>
+                <label>- {{creditcard?.Address}} </label>
               </div>
               <div class="col-md-3">
                 <label for="txtMobile">Mobile</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.MobilePhone}} </label>
+                <label>- {{creditcard?.MobilePhone}} </label>
               </div>
             </div>
 
@@ -95,7 +95,7 @@
                 <label for="txtHomePhone">Home Phone</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.HomePhone}}</label>
+                <label>- {{creditcard?.HomePhone}}</label>
               </div>
 
               <div class="col-md-3">
@@ -103,7 +103,7 @@
               </div>
 
               <div class="col-md-3">
-                <label>{{creditcard.OfficePhone}}</label>
+                <label>- {{creditcard?.OfficePhone}}</label>
               </div>
             </div>
 
@@ -113,13 +113,13 @@
                 <label for="txtEmail">Email</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.Email}}</label>
+                <label>- {{creditcard?.Email}}</label>
               </div>
               <div class="col-md-3">
                 <label for="txtEmployer">Employer</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.Employer}}</label>
+                <label>- {{creditcard?.Employer}}</label>
               </div>
             </div>
 
@@ -128,13 +128,13 @@
                 <label for="txtSalary">Salary</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.Salary}}</label>
+                <label>- {{creditcard?.Salary}}</label>
               </div>
               <div class="col-md-3">
                 <label for="txtJobTitle">Job Title</label>
               </div>
               <div class="col-md-3">
-                <label>-{{creditcard.JobTitle}}-</label>
+                <label>-{{creditcard?.JobTitle}}</label>
               </div>
             </div>
 
@@ -143,190 +143,43 @@
                 <label for="txtCardLimit">Card Limit</label>
               </div>
               <div class="col-md-3">
-                <label>Rs {{creditcard.CardLimit}}</label>
+                <label>-Rs {{creditcard?.CardLimit}}</label>
               </div>
               <div class="col-md-3">
                 <label for="txtCashLimit">Cash Limit</label>
               </div>
               <div class="col-md-3">
-                <label>Rs {{creditcard.CashLimit}} </label>
+                <label>-Rs {{creditcard?.CashLimit}} </label>
               </div>
             </div>
-
 
             <div class="form-group">
               <div class="col-md-3">
                 <label for="ddlCardType">Card Type</label>
               </div>
               <div class="col-md-3">
-                <label> {{creditcard.CardTypeId}} Type</label>
+                <label>- {{creditcard?.CardTypeId}} Type</label>
               </div>
               <div class="col-md-3">
                 <label for="ddlNationality">Nationality</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.NationalityId}} </label>
+                <label>- {{creditcard?.NationalityId}} </label>
               </div>
             </div>
-
 
             <div class="form-group">
               <div class="col-md-3">
                 <label for="txtNote">Note</label>
               </div>
               <div class="col-md-3">
-                <label>{{creditcard.Note}}</label>
+                <label>- {{creditcard?.Note}}</label>
               </div>
             </div>
-
-
-          </form>
-        </div>
-      </div>
-
-      <div id="#demo2" class="collapse">
-
-        <div>
-          <form>
-            <div class="form-group">
-              <div class="col-md-3">
-                <label>Name in Full</label>
-              </div>
-              <div class="col-md-3">
-                <label> {{creditcard.FullName}}</label>
-              </div>
-              <div class="col-md-3">
-                <label>Display Name</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.DisplayName}}</label>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <div class="col-md-3">
-                <label for="txtNic">NIC</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.Nic}}</label>
-              </div>
-              <div class="col-md-3">
-                <label for="txtPassport">Passport</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.Passport}}</label>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <div class="col-md-3">
-                <label for="txtAddress">Address</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.Address}} </label>
-              </div>
-              <div class="col-md-3">
-                <label for="txtMobile">Mobile</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.MobilePhone}} </label>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <div class="col-md-3">
-                <label for="txtHomePhone">Home Phone</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.HomePhone}}</label>
-              </div>
-
-              <div class="col-md-3">
-                <label for="txtOffice">Office Phone</label>
-              </div>
-
-              <div class="col-md-3">
-                <label>{{creditcard.OfficePhone}}</label>
-              </div>
-            </div>
-
-
-            <div class="form-group">
-              <div class="col-md-3">
-                <label for="txtEmail">Email</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.Email}}</label>
-              </div>
-              <div class="col-md-3">
-                <label for="txtEmployer">Employer</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.Employer}}</label>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <div class="col-md-3">
-                <label for="txtSalary">Salary</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.Salary}}</label>
-              </div>
-              <div class="col-md-3">
-                <label for="txtJobTitle">Job Title</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.JobTitle}} 000</label>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <div class="col-md-3">
-                <label for="txtCardLimit">Card Limit</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.CardLimit}} Cards</label>
-              </div>
-              <div class="col-md-3">
-                <label for="txtCashLimit">Cash Limit</label>
-              </div>
-              <div class="col-md-3">
-                <label>Rs {{creditcard.CashLimit}} </label>
-              </div>
-            </div>
-
-
-            <div class="form-group">
-              <div class="col-md-3">
-                <label for="ddlCardType">Card Type</label>
-              </div>
-              <div class="col-md-3">
-                <label> {{creditcard.CardTypeId}} Type</label>
-              </div>
-              <div class="col-md-3">
-                <label for="ddlNationality">Nationality</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.NationalityId}} </label>
-              </div>
-            </div>
-
-
-            <div class="form-group">
-              <div class="col-md-3">
-                <label for="txtNote">Note</label>
-              </div>
-              <div class="col-md-3">
-                <label>{{creditcard.Note}}</label>
-              </div>
-            </div>
-
-
           </form>
         </div>
       </div>
 
     </div>
+    </div>
   </div>
-</div>
